--- a/SpMVC_020_JDBC/src/main/webapp/WEB-INF/views/include/include_footer.jspf
+++ b/SpMVC_020_JDBC/src/main/webapp/WEB-INF/views/include/include_footer.jspf
@@ -16,4 +16,7 @@ address {
 
 <footer>
 	<address>CopyRight &copy; kkh_8080@naver.com</address>
+	<div id="modal">
+		<span>X</span>
+	</div>
 </footer>
