--- a/SpMVC_020_JDBC/src/main/webapp/static/css/main_layout.css
+++ b/SpMVC_020_JDBC/src/main/webapp/static/css/main_layout.css
@@ -5,16 +5,18 @@
 	margin: 0;
 	padding: 0;
 }
-body{
-	display:flex;
+
+body {
+	display: flex;
 	flex-direction: column;
-	width:100%;
-	height:50vh;
+	width: 100%;
+	height: 50vh;
 }
-section.main_sec{
-	flex:auto;
-	overflow: auto;
+
+section.main_sec {
+	flex: auto;
 }
+
 header {
 	background-color: green;
 	color: white;
@@ -22,8 +24,6 @@ header {
 	text-align: center;
 	padding: 2rem;
 }
-
-
 
 /*
 style지정을 할 때
@@ -54,7 +54,17 @@ table th, td {
 
 table td {
 	margin-left: 30px;
-	text-align: center;
+	text-align: left;
+	max-width: 0;
+	padding-left: 10px; overflow : hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
+table td:hover {
+	overflow: visible;
+	text-overflow: inherit;
 }
 
 table tr:last-child td {
@@ -110,4 +120,33 @@ div.btn_box {
 	width: 90%;
 	margin: 5px auto;
 	text-align: right;
+}
+
+div#modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: black;
+	opacity: 0.7;
+	z-index: 100;
+	display: none;
+}
+
+div#modal span {
+	position: absolute;
+	display: inline-block;
+	top: 30px;
+	right: 30px;
+	font-size: 30px;
+	color: white;
+	font-weight: 900;
+	border-radius: 50%;
+	padding: 10px 20px;
+	transition: 1s;
+}
+
+div#modal span:hover {
+	background-color: gray;
 }
