--- a/SpMVC_020_JDBC/src/main/webapp/static/css/main_layout.css
+++ b/SpMVC_020_JDBC/src/main/webapp/static/css/main_layout.css
@@ -10,11 +10,12 @@ body {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 50vh;
+	height: 100vh;
 }
 
 section.main_sec {
 	flex: auto;
+	overflow: auto;
 }
 
 header {
@@ -56,7 +57,8 @@ table td {
 	margin-left: 30px;
 	text-align: left;
 	max-width: 0;
-	padding-left: 10px; overflow : hidden;
+	padding-left: 10px;
+	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -124,29 +126,51 @@ div.btn_box {
 
 div#modal {
 	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+	top:0;
+	left:0;
+	bottom:0;
+	right:0;
 	background-color: black;
-	opacity: 0.7;
+	opacity: 0.5;
 	z-index: 100;
 	display: none;
 }
-
 div#modal span {
 	position: absolute;
 	display: inline-block;
-	top: 30px;
+	top:30px;
 	right: 30px;
 	font-size: 30px;
-	color: white;
+	color:white;
 	font-weight: 900;
 	border-radius: 50%;
-	padding: 10px 20px;
-	transition: 1s;
+	padding:10px 20px;
+	transition:0.6s
 }
 
 div#modal span:hover {
-	background-color: gray;
+	background-color: white;
+	cursor: pointer;
+}
+section.search_sec {
+	position: absolute;
+	top:50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	
+	background-color: white;
+	opacity: 1;
+	width: 80%;
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	overflow: auto;
+	
+	z-index: 100;
+}
+
+section.search_sec table {
+	margin: 10px auto;
+	width: 95%;
 }
