--- a/SpMVC_020_JDBC/src/main/webapp/static/css/main_home.css
+++ b/SpMVC_020_JDBC/src/main/webapp/static/css/main_home.css
@@ -14,7 +14,7 @@ section#main_sec article {
 	border: 1px solid green;
 	flex: 1;
 	margin: 6px 3px;
-	border: 1px solid green;
+	width:30%;
 }
 
 section#main_sec article ul {
@@ -25,7 +25,15 @@ section#main_sec article ul {
 section#main_sec article li {
 	margin: 0 20px;
 	padding: 0 7px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	/*
+	li tag에 ellipsis를 적용하기 위하여
+	article box의 width를 위에서 먼저 지정
 	
+	감싸고 있는 box의 width를 지정하면
+	내부의 tag는 자체적으로 모습을 갖춘다*/
 	
 }
 
