--- a/TeamProject_022_Weather/src/main/webapp/static/css/home_B.css
+++ b/TeamProject_022_Weather/src/main/webapp/static/css/home_B.css
@@ -59,7 +59,15 @@
 .log_join {
 	text-align: right;
 }
-
+button.lg, button.jo{
+	width: 70px;
+	cursor: pointer;
+	border: 0;
+	border-radius: 5px;
+	background-color: transparent;
+	font-size: 25px;
+	font: bold;
+}
 .item-2 {
 	display: grid;
 	grid-template-columns: 25% 50% 25%;
