--- a/TeamProject_022_Weather/src/main/webapp/static/css/login.css
+++ b/TeamProject_022_Weather/src/main/webapp/static/css/login.css
@@ -3,33 +3,32 @@
 	box-sizing: border-box;
 }
 
-figure.snip1432 * {
+figure.logo * {
 	-webkit-transition: all 0.4s ease;
 	transition: all 0.4s ease; /* 호버속도조절 */
 }
 
-figure.snip1432 h1:nth-of-type(2) {
+figure.logo h1:nth-of-type(2) {
 	opacity: 0;
 	-webkit-transform: translateY(100%);
-	transform: translateY(150%); /* 회원정보수정 사라지는반경 */
+	transform: translateY(150%); /* 로그인 사라지는반경 */
 }
 
-figure.snip1432:hover figcaption h1:first-of-type, figure.snip1432.hover figcaption h1:first-of-type
+figure.logo:hover figcaption h1:first-of-type, figure.logo.hover figcaption h1:first-of-type
 	{
-	transform: translateY(200%); /* changing 사라지는반경 */
+	transform: translateY(200%); /* Log In 사라지는반경 */
 	opacity: 0;
 }
 
-figure.snip1432:hover figcaption h1:nth-of-type(2), figure.snip1432.hover figcaption h1:nth-of-type(2)
+figure.logo:hover figcaption h1:nth-of-type(2), figure.logo.hover figcaption h1:nth-of-type(2)
 	{
 	opacity: 1;
 	-webkit-transform: translateY(0%);
-	transform: translateY(-450%); /* 회원정보수정 높낮이*/
+	transform: translateY(-450%); /* 로그인 높낮이*/
 }
 
 body {
-	background: linear-gradient(130deg, #7389d0, #eebdc3);
-	background-repeat: no-repeat;
+	background: linear-gradient(130deg, #7389d0, #eebdc3) no-repeat;
 	background-attachment: fixed;
 }
 
@@ -61,13 +60,11 @@ to {
 
 }
 section {
-	/* 개인정보 등록하는 부분을 감싼 옅은 선 */
 	display: grid;
 	justify-items: center;
 }
 
 fieldset {
-	/* 개인정보 등록하는 부분을 감싼 옅은 선 */
 	border-radius: 20px;
 	display: grid;
 	justify-items: center;
@@ -79,30 +76,30 @@ table {
 	border-collapse: collapse;
 }
 
-.joinTable th, .joinTable td {
+th, td {
 	padding: 10px;
 	box-sizing: border-box;
 	border-bottom: 1px solid #ddd;
 }
 
-.joinTable th {
+th {
 	text-align: center;
 	background-color: gray;
 	border-radius: 15px;
 }
 
-.joinTable td {
-	width: 400px;
+td {
+	width: 300px;
 }
 
-.joinTable .textForm {
+.input .user {
 	width: 300px;
 	height: 30px;
 	border: 0;
 	border-radius: 5px;
 }
 
-.joinTable:hover .textForm:hover {
+.input:hover .user:hover {
 	animation: sparkle 4s infinite linear;
 	background: linear-gradient(90deg, #7389d0, #eebdc3, #7389d0);
 	background-size: 300% 100%;
@@ -111,14 +108,7 @@ table {
 	transform: scale(0.99) translateY(3px);
 }
 
-.joinTable .btn {
-	width: 70px;
-	cursor: pointer;
-	border: 0;
-	border-radius: 5px;
-}
-
-.btn {
+#btn_login, #btn_join {
 	display: inline-block;
 	color: rgb(90, 90, 90);
 	transition: all 0.3s ease-out;
@@ -132,12 +122,11 @@ table {
 	font-size: 15px;
 }
 
-.btn:hover {
+#btn_login:hover, #btn_join:hover {
 	background-position: 99% 50%;
 }
 
 button {
 	cursor: pointer;
 	margin-top: 10px;
-	border-radius: 5px;
-}
+	border-radius: 5px;}
