--- a/SpMVC_050_gallery/src/main/webapp/WEB-INF/views/include/include_nav.jspf
+++ b/SpMVC_050_gallery/src/main/webapp/WEB-INF/views/include/include_nav.jspf
@@ -8,22 +8,38 @@
 <c:set
 	var="rootPath"
 	value="${pageContext.request.contextPath}" />
-<nav id="main_nav">
-	<ul>
-		<li id="home">HOME</li>
-		<c:if test="${MEMBER.m_level < 6 }">
-			<li id="image_create">이미지 등록</li>
-		</c:if>
-		<c:if test="${empty MEMBER}">
-			<li id="login">로그인</li>
-			<li id="join">회원가입</li>
-		</c:if>
-		<c:if test="${not empty MEMBER}">
-			<li>Lv : "${MEMBER.m_level}" ${MEMBER.m_nick}님 환영합니다</li>
-			<li id="logout">로그아웃</li>
-		</c:if>
-		<c:if test="${MEMBER.m_level == 0 }">
-			<li id="admin">관리자</li>
-		</c:if>
-	</ul>
-</nav>
+<style>
+.d_nav {
+	margin: 30px;
+	height: 100px;
+	background-color: #e4bd92;
+	display: flex;
+	justify-content: center; text-align : center;
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.d_nav div {
+	padding: 30px;
+	line-height: 1.2;
+	font-size: 25px;
+}
+</style>
+
+<div class="d_nav">
+	<div id="home">HOME</div>
+	<c:if test="${MEMBER.m_level < 6 }">
+		<div id="image_create">이미지 등록</div>
+	</c:if>
+	<c:if test="${empty MEMBER}">
+		<div id="login">로그인</div>
+		<div id="join">회원가입</div>
+	</c:if>
+	<c:if test="${not empty MEMBER}">
+		<div>Lv : "${MEMBER.m_level}" ${MEMBER.m_nick}님 환영합니다</div>
+		<div id="logout">로그아웃</div>
+	</c:if>
+	<c:if test="${MEMBER.m_level == 0 }">
+		<div id="admin">관리자</div>
+	</c:if>
+</div>
