--- a/Project_Woo/src/main/webapp/static/css/home_B.css
+++ b/Project_Woo/src/main/webapp/static/css/home_B.css
@@ -1,11 +1,19 @@
 @charset "UTF-8";
 
+@font-face {
+	font-family: "TmoneyRoundWindExtraBold";
+	src:
+		url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff")
+		format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
 * {
 	box-sizing: border-box;
-	margin: 1px;
+	margin: 0;
 	padding: 0;
 	color: #333333;
-	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 }
 
 .container {
@@ -59,7 +67,8 @@
 .log_join {
 	text-align: right;
 }
-button.lg, button.jo{
+
+button.lg, button.jo {
 	width: 70px;
 	cursor: pointer;
 	border: 0;
@@ -68,6 +77,7 @@ button.lg, button.jo{
 	font-size: 25px;
 	font: bold;
 }
+
 .item-2 {
 	display: grid;
 	grid-template-columns: 25% 50% 25%;
