--- a/Project_Woo_02/src/main/webapp/static/css/home_B.css
+++ b/Project_Woo_02/src/main/webapp/static/css/home_B.css
@@ -5,7 +5,6 @@
 	margin: 1px;
 	padding: 0;
 	color: #333333;
-	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 }
 
 .container {
@@ -59,7 +58,8 @@
 .log_join {
 	text-align: right;
 }
-button.lg, button.jo{
+
+button.lg, button.jo {
 	width: 70px;
 	cursor: pointer;
 	border: 0;
@@ -68,11 +68,11 @@ button.lg, button.jo{
 	font-size: 25px;
 	font: bold;
 }
+
 .item-2 {
-	display: grid;
-	grid-template-columns: 25% 50% 25%;
-	grid-template-rows: auto;
-	font-size: auto;
+	display: flex;
+	flex-direction: row;
+	flex: 2fr 1fr 1fr 1fr;
 }
 
 .w_1 {
@@ -243,9 +243,11 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
         */
 	}
 	.item-2 {
-		grid-template-columns: 20% 60% 20%;
-		grid-template-rows: 2fr 1fr;
+		display: flex;
+		flex-direction: column;
+		flex: 40% 20% 20% 20%;
 	}
+}
 	.item-4 {
 		grid-column: 1/3;
 		/*
