--- a/Project_Woo_02/src/main/webapp/static/css/home_B2.css
+++ b/Project_Woo_02/src/main/webapp/static/css/home_B2.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
 
-
 * {
 	box-sizing: border-box;
 	margin: 1px;
 	padding: 0;
+	color: #333333;
 }
 
 .container {
 	max-width: 1240px;
-	margin: 0 auto;
+	margin: 0 auto;	
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 8fr 30fr 30fr 30px;
@@ -58,18 +58,20 @@
 .log_join {
 	text-align: right;
 }
-
-.logout, .mypage {
+button.lg, button.jo{
 	width: 70px;
 	cursor: pointer;
 	border: 0;
 	border-radius: 5px;
+	background-color: transparent;
+	font-size: 25px;
+	font: bold;
 }
-
 .item-2 {
 	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: 40% 20% 20% 20%;
+	grid-template-columns: 25% 50% 25%;
+	grid-template-rows: auto;
+	font-size: auto;
 }
 
 .w_1 {
@@ -117,6 +119,7 @@
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: auto;
+	justify-content: center;
 }
 
 .o_1 {
@@ -190,39 +193,26 @@ figure.snip1200 h1 span {
 div.w_data_o {
 	position: relative;
 	opacity: 0;
-	display: flex;
-	height: 80%;
+	height: 70%;
 	flex-flow: row wrap;
-	/*border: 1px solid red;*/
-	overflow: auto;
-}
-div.w_data_o::-webkit-scrollbar{
-	width:10px;
-	background-color: transparent;
-	
-}
-div.w_data_o::-webkit-scrollbar-thumb{
-	background-color: #2f3542;
-	
+	border: 1px solid red;
+	top: -5%;
+	display: flex;
 }
 
-div.w_data_div_o {
-	position: inherit;
-	flex: 1 1 35%;
-	/*border: 2px solid green;*/
-	text-align: center;
-	margin: 0 10px;
-	flex-wrap: wrap;
-	padding-top: 1%;
-}
-
-div.w_data_div_o img {
-	width: 50%;
-	/*border: 1px solid paleturquoise;*/
+div.w_data_o_text {
+	padding-top: 30%;
+	flex: 1;
+	border: 1px solid blue;
+	font-size: 140%;
 }
 
 figure.snip1200:hover img.clothes, figure.snip1200:hover p {
 	opacity: 0;
+}
+
+figure.snip1200:hover .p3 {
+	opacity: 1;
 }
 
 figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
@@ -252,9 +242,8 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
         */
 	}
 	.item-2 {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: 40% 20% 20% 20%;
+		grid-template-columns: 20% 60% 20%;
+		grid-template-rows: 2fr 1fr;
 	}
 	.item-4 {
 		grid-column: 1/3;
@@ -266,10 +255,14 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
 }
 
 /*
-.thumb {height를 따로 지정해주지 않았지만 부모가 만들어준 높이안에서 padding 60%를 사용해서 지정 ??
-	background-size:cover;부모가 만들어준 높이를 cover 해라 background-position:centercenter;
+.thumb {
+	height를 따로 지정해주지 않았지만
+	 부모가 만들어준 높이안에서 padding 60%를 사용해서 지정 ??
+	background-size:cover;부모가 만들어준 높이를 cover 해라 
+	background-position:centercenter;
 	
-}*/
+}
+*/
 article {
 	flex: 1 1=> 원래는 1 1 0 넘치는 걸 줄여서 쓰는 속성 모자란 걸 늘려서 쓰는 속성??
   넘치는 모자른 속성을 채울 땐 flex: 1? 무슨 소린지 이해해보기 flex:1;
