--- a/Project_Woo_02/src/main/webapp/static/css/login.css
+++ b/Project_Woo_02/src/main/webapp/static/css/login.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@font-face {
+	font-family: "TmoneyRoundWindExtraBold";
+	src:
+		url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff")
+		format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
 *, *:before, *:after {
 	box-sizing: border-box;
 }
