--- a/Project_Woo_02/src/main/webapp/static/css/home_A.css
+++ b/Project_Woo_02/src/main/webapp/static/css/home_A.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-
 * {
 	box-sizing: border-box;
 	margin: 1px;
 	padding: 0;
+	color: #333333;
 }
 
 .container {
@@ -12,8 +12,8 @@
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 8fr 30fr 30fr 30px;
-	grid-gap: 20px;
+	grid-template-rows: 1fr 3fr 3fr;
+	grid-gap: 30px;
 
 	/*
     화면의 전체적인 틀은 grid 를 이용하여 틀을 잡고
@@ -30,26 +30,6 @@
     */
 }
 
-.container div {
-	
-}
-
-.card {
-	background-color: green;
-	background: #fff;
-	text-decoration: none;
-	color: #444;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
-	display: flex;
-	min-height: 100%;
-	/* 부모 item에서의 높이를 100% 다 써라*/
-	flex-direction: column;
-	/* flex의 기본 값은 가로인데 그것을 세로로 바꿔라*/
-	justify-content: space-between;
-	/* 위 아래로 딱 붙게 만드는 것*/
-	flex-wrap: nowrap;
-}
-
 .item-1 {
 	display: flex;
 	flex-direction: column;
@@ -59,58 +39,91 @@
 	text-align: right;
 }
 
-.logout, .mypage {
+button.lg, button.jo {
 	width: 70px;
 	cursor: pointer;
 	border: 0;
 	border-radius: 5px;
+	background-color: transparent;
+	font-size: 25px;
+	font: bold;
 }
 
 .item-2 {
 	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: 40% 20% 20% 20%;
+	grid-template-columns: 300px auto;
+	grid-template-rows: 45% 25% 15% 15%;
 }
 
 .w_1 {
-	grid-column: 1/2;
+	grid-column: 1/3;
 	word-break: break-all;
 }
 
-.w_2 {
-	grid-column: 2/3;
+.w_1 img {
+	width: 40%;
+	height: 40%;
+	margin-left: 40%
 }
 
-.w_2 img {
-	width: 100%;
-	height: 100%;
+.w_2 {
+	grid-column: 3/4;
+	text-align: left;
+	font-size: 150%;
 }
 
 .w_3 {
-	grid-column: 3/4;
+	grid-column: 1/4;
+	display: flex;
 }
 
-.w_4 {
+.w_3_a {
+	flex: 1;
+	flex-direction: column;
+	margin: 0.5% 3%;
+	border: 1px solid black;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 2fr;
+}
+
+.w_3_a div:nth-child(1) {
+	grid-column: 1/2;
+}
+
+.w_3_a div:nth-child(2) {
+	grid-column: 2/3;
+}
+
+.w_3_a div:nth-child(3) {
+	grid-column: 1/4;
+}
+
+.w_3_a div {
+	border: 1px solid black;
+	flex: 1;
+}
+
+.w_4, .w_5 {
+	border: 1px solid black;
 	grid-column: 1/4;
 	display: flex;
 	text-align: center;
 }
 
-.w_4 div {
+.w_4_a, .w_5_a {
 	flex: 1;
-	margin: 3%;
-	font-size: 25px;
-}
-
-.w_4_a {
+	border: 1px solid black;
 	display: flex;
 	flex-direction: column;
+	margin: 0.3%;
 }
 
-.w_4_a img {
-	margin-top: 15%;
-	width: 60%;
-	height: 60%;
+.w_4_a img, .w_5_a img {
+	flex: 1;
+	width: 50%;
+	margin: 1%;
+	display: none;
 }
 
 .item-3 {
@@ -160,18 +173,6 @@ figure.snip1200 figcaption.o {
 	bottom: 5%;
 }
 
-figure.snip1200 .heading_o {
-	overflow: hidden;
-	transform: translateY(50%);
-	position: absolute;
-	bottom: 5%;
-	width: 100%;
-}
-
-figure.snip1200:hover .heading {
-	bottom: 0;
-}
-
 figure.snip1200 h1 {
 	display: table;
 	margin: 0 auto;
@@ -196,14 +197,14 @@ div.w_data_o {
 	/*border: 1px solid red;*/
 	overflow: auto;
 }
-div.w_data_o::-webkit-scrollbar{
-	width:10px;
+
+div.w_data_o::-webkit-scrollbar {
+	width: 10px;
 	background-color: transparent;
-	
 }
-div.w_data_o::-webkit-scrollbar-thumb{
+
+div.w_data_o::-webkit-scrollbar-thumb {
 	background-color: #2f3542;
-	
 }
 
 div.w_data_div_o {
@@ -234,14 +235,8 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
 @media screen and (min-width:1000px) {
 	.container {
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 25fr 90fr 30px;
+		grid-template-rows: 25fr 80fr 30px;
 	}
-	/*
-    전체화면 기준은 화면을 절반을 나눈 형태
-    ㅁㅁ
-    ㅁㅁ
-    이런 식으로 사용하겠다는 의미
-    */
 	.item-1 {
 		grid-column: 1/3;
 
@@ -252,33 +247,29 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
         */
 	}
 	.item-2 {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: 40% 20% 20% 20%;
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 38% 7% 25% 15% 15%;
 	}
-	.item-4 {
-		grid-column: 1/3;
-		/*
-        .item-4는 마지막 줄을 다 사용하겠다는 의미 
-        footer로 사용 예정
-        */
+	.w_1 {
+		grid-column: 1/4;
+		word-break: break-all;
 	}
-}
-
-/*
-.thumb {height를 따로 지정해주지 않았지만 부모가 만들어준 높이안에서 padding 60%를 사용해서 지정 ??
-	background-size:cover;부모가 만들어준 높이를 cover 해라 background-position:centercenter;
-	
-}*/
-article {
-	flex: 1 1=> 원래는 1 1 0 넘치는 걸 줄여서 쓰는 속성 모자란 걸 늘려서 쓰는 속성??
-  넘치는 모자른 속성을 채울 땐 flex: 1? 무슨 소린지 이해해보기 flex:1;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	padding: 15px;
-}
-
-article p {
-	flex: 1;
+	.w_1 img {
+		width: 35%;
+		height: 35%;
+		margin-left: 30%
+	}
+	.w_2 {
+		grid-column: 1/4;
+		text-align: center;
+		font-size: 150%;
+	}
+	.w_3_a {
+		flex: 1;
+		flex-direction: column;
+		margin: 0.5% 3%;
+		border: 1px solid black;
+		display: flex;
+	}
 }
