--- a/Project_Woo_02/src/main/webapp/static/css/home_A.css
+++ b/Project_Woo_02/src/main/webapp/static/css/home_A.css
@@ -68,8 +68,9 @@ button.lg, button.jo {
 
 .w_2 {
 	grid-column: 3/4;
-	text-align: left;
+	text-align: center;
 	font-size: 150%;
+	display: flex;
 }
 
 .w_3 {
@@ -81,7 +82,6 @@ button.lg, button.jo {
 	flex: 1;
 	flex-direction: column;
 	margin: 0.5% 3%;
-	border: 1px solid black;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 2fr;
@@ -100,20 +100,23 @@ button.lg, button.jo {
 }
 
 .w_3_a div {
-	border: 1px solid black;
 	flex: 1;
+}
+.w_3_a img{
+	margin-left: 30%;
+	width:40%;
 }
 
 .w_4, .w_5 {
-	border: 1px solid black;
 	grid-column: 1/4;
 	display: flex;
 	text-align: center;
+	overflow: auto;
 }
 
 .w_4_a, .w_5_a {
+	
 	flex: 1;
-	border: 1px solid black;
 	display: flex;
 	flex-direction: column;
 	margin: 0.3%;
@@ -123,9 +126,7 @@ button.lg, button.jo {
 	flex: 1;
 	width: 50%;
 	margin: 1%;
-	display: none;
 }
-
 .item-3 {
 	display: grid;
 	grid-template-columns: 1fr;
@@ -239,12 +240,6 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
 	}
 	.item-1 {
 		grid-column: 1/3;
-
-		/*
-        == grid-column: 1/ span 2;
-        .item-1 은 첫번째 줄을 다 사용하겠다는 의미 
-        head로 사용 예정
-        */
 	}
 	.item-2 {
 		display: grid;
@@ -262,14 +257,8 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
 	}
 	.w_2 {
 		grid-column: 1/4;
-		text-align: center;
+		justify-content:center;
 		font-size: 150%;
-	}
-	.w_3_a {
-		flex: 1;
-		flex-direction: column;
-		margin: 0.5% 3%;
-		border: 1px solid black;
 		display: flex;
 	}
 }
