--- a/Project_Woo_02/src/main/webapp/static/css/home_B.css
+++ b/Project_Woo_02/src/main/webapp/static/css/home_B.css
@@ -70,6 +70,7 @@ button.lg, button.jo {
 	grid-column: 3/4;
 	text-align: center;
 	font-size: 150%;
+	display: flex;
 }
 
 .w_3 {
@@ -81,7 +82,6 @@ button.lg, button.jo {
 	flex: 1;
 	flex-direction: column;
 	margin: 0.5% 3%;
-	border: 1px solid black;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 2fr;
@@ -100,7 +100,6 @@ button.lg, button.jo {
 }
 
 .w_3_a div {
-	border: 1px solid black;
 	flex: 1;
 }
 .w_3_a img{
@@ -109,15 +108,15 @@ button.lg, button.jo {
 }
 
 .w_4, .w_5 {
-	border: 1px solid black;
 	grid-column: 1/4;
 	display: flex;
 	text-align: center;
+	overflow: auto;
 }
 
 .w_4_a, .w_5_a {
+	
 	flex: 1;
-	border: 1px solid black;
 	display: flex;
 	flex-direction: column;
 	margin: 0.3%;
@@ -247,7 +246,8 @@ figure.snip1200:hover div.w_data, figure.snip1200:hover div.w_data_o {
 	}
 	.w_2 {
 		grid-column: 1/4;
-		text-align: center;
+		justify-content:center;
 		font-size: 150%;
+		display: flex;
 	}
 }
